refactor: 调整公告模块